--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Mandatory settings
 
-blog_theme: dark # Or use dark
+blog_theme: light # Or use dark
 name: basri.me
 paginate: 25
 url: https://hbasria.github.io
